# iio-uinput

./: CMakeLists.txt  README.md  argpopt.h  iioaccell.cpp  iioaccell.h  main.cpp  uinputdev.cpp  uinputdev.h
debian/: changelog  control  copywrite
